<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="MainActivity"
    android:weightSum="20">

    <TextView
        android:id="@+id/mainTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/welcome"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_weight="5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/counter"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/number"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:id="@+id/resultTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startMsg"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/guessButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>